--- a/src/language/en.json
+++ b/src/language/en.json
@@ -4,6 +4,7 @@
         "Tab":{
             "Home":"Home",
             "Product":"Web templates available",
+            "Menu":"Menu",
             "Introduce":"Introduce",
             "Contact":"Contact"
         }
