--- a/src/language/vi.json
+++ b/src/language/vi.json
@@ -4,6 +4,7 @@
         "Tab":{
             "Home":"Trang chủ",
             "Product":"Mẫu Web có sẵn",
+            "Menu":"Danh mục",
             "Introduce":"Giới thiệu",
             "Contact":"Liên hệ"
         }
